PROJECT(project)
cmake_minimum_required(VERSION 2.6)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall  -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O2")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall  -O2")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O2")
#include_directories(${CMAKE_SOURCE_DIR}/x264)
#LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/x264)
include_directories(/usr/local/include)
LINK_DIRECTORIES(/usr/local/lib)
set(EXECUTABLE_NAME "encoder")
add_executable(${EXECUTABLE_NAME} x264_test1.c)
target_link_libraries(${EXECUTABLE_NAME}  x264 pthread dl m)
